@@ -86,11 +86,6 @@
             </p>
 
 
-        <p>
-            <tal:block condition="order/customer_newsletter">
-             <span i18n:translate="txt_subscribe_newsletter">Subscribe to newsletter</span><br />
-            </tal:block>
-        </p>
         <p tal:condition="order/customer_comments">
             <span i18n:translate="label_details_comments">Comments</span>:
             <span tal:replace="order/customer_comments" />
