@@ -60,7 +60,6 @@ class TestOrderManager(FtwShopTestCase):
             'customer_city',
             'customer_shipping_address',
             'customer_country',
-            'customer_newsletter',
             'customer_comments',
             'shipping_city',
             'shipping_company',
@@ -98,7 +97,6 @@ class TestOrderManager(FtwShopTestCase):
             MOCK_CUSTOMER['city'],
             '',
             MOCK_CUSTOMER['country'],
-            'False',
             '',
             MOCK_SHIPPING['city'],
             MOCK_SHIPPING['company'],
